@@ -22,6 +22,9 @@ Upgrading from 1.9
 ---------------------
 giix's directory layout has changed. Please review the installation instructions in INSTALL and change your configurations accordingly.
 
+The message translation was removed from the generated view files. The translation of the view files should be done via file translation.
+See <http://www.yiiframework.com/doc/guide/1.1/en/topics.i18n#file-translation> for more information.
+
 Upgrading from 1.8
 ---------------------
 The method GxActiveRecord::label doesn't have the second parameter "ucwords" anymore. The same happens when it is overriden on the generated base model.
