@@ -8,13 +8,13 @@
 echo "<?php\n
 \$this->breadcrumbs = array(
 	\$model->label(2) => array('index'),
-	Yii::t('app', 'Manage'),
+	'Manage',
 );\n";
 ?>
 
 $this->menu = array(
-		array('label'=>Yii::t('app', 'List') . ' ' . $model->label(2), 'url'=>array('index')),
-		array('label'=>Yii::t('app', 'Create') . ' ' . $model->label(), 'url'=>array('create')),
+		array('label'=>'List' . ' ' . $model->label(2), 'url'=>array('index')),
+		array('label'=>'Create' . ' ' . $model->label(), 'url'=>array('create')),
 	);
 
 Yii::app()->clientScript->registerScript('search', "
@@ -31,13 +31,13 @@ $('.search-form form').submit(function(){
 ");
 ?>
 
-<h1><?php echo '<?php'; ?> echo Yii::t('app', 'Manage') . ' ' . GxHtml::encode($model->label(2)); ?></h1>
+<h1><?php echo '<?php'; ?> echo 'Manage' . ' ' . GxHtml::encode($model->label(2)); ?></h1>
 
 <p>
 You may optionally enter a comparison operator (&lt;, &lt;=, &gt;, &gt;=, &lt;&gt; or =) at the beginning of each of your search values to specify how the comparison should be done.
 </p>
 
-<?php echo "<?php echo GxHtml::link(Yii::t('app', 'Advanced Search'), '#', array('class' => 'search-button')); ?>"; ?>
+<?php echo "<?php echo GxHtml::link('Advanced Search', '#', array('class' => 'search-button')); ?>"; ?>
 
 <div class="search-form">
 <?php echo "<?php \$this->renderPartial('_search', array(
