@@ -8,17 +8,17 @@
 echo "<?php\n
 \$this->breadcrumbs = array(
 	\$model->label(2) => array('index'),
-	Yii::t('app', 'Create'),
+	'Create',
 );\n";
 ?>
 
 $this->menu = array(
-	array('label'=>Yii::t('app', 'List') . ' ' . $model->label(2), 'url' => array('index')),
-	array('label'=>Yii::t('app', 'Manage') . ' ' . $model->label(2), 'url' => array('admin')),
+	array('label'=>'List' . ' ' . $model->label(2), 'url' => array('index')),
+	array('label'=>'Manage' . ' ' . $model->label(2), 'url' => array('admin')),
 );
 ?>
 
-<h1><?php echo '<?php'; ?> echo Yii::t('app', 'Create') . ' ' . GxHtml::encode($model->label()); ?></h1>
+<h1><?php echo '<?php'; ?> echo 'Create' . ' ' . GxHtml::encode($model->label()); ?></h1>
 
 <?php echo "<?php\n"; ?>
 $this->renderPartial('_form', array(
